<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/bg_round"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/neobis_logo" />

    <TextView
        android:id="@+id/fms_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fms"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_below="@id/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fms_tv"
        android:paddingLeft="40dp"
        android:paddingTop="120dp"
        android:paddingRight="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_tiet"
                android:background="@color/light_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:layout_below="@id/login_til"
            android:layout_marginTop="15dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_tiet"
                android:background="@color/light_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasword_forgot"
            android:textColor="@color/neobisColor"
            android:layout_below="@id/password_til"
            android:layout_marginTop="12dp"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@id/password_til"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="#2A9A6F"
            android:text="@string/sign_in_btn"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>