<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/bg_round"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/neobis_logo" />

    <TextView
        android:id="@+id/fms_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fms"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_below="@id/logo"/>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_below="@id/background"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/reset_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_description"
        android:layout_below="@id/reset_password"
        android:textColor="@color/main_grey"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password_description"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:hint="E-mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tiet"
            android:background="@color/light_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/authorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        android:textColor="@color/neobisColor"
        android:paddingRight="16dp"
        android:layout_below="@id/email_til"
        android:layout_marginTop="12dp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/email_til"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_rounded"
        android:backgroundTint="#2A9A6F"
        android:text="@string/reset_password"
        android:textColor="@android:color/white" />

</RelativeLayout>